gitops/applications/base/harbor/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-ui
  namespace: ${ARGOCD_ENV_harbor_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_harbor_ui_istio_gateway_namespace}/${ARGOCD_ENV_harbor_ui_istio_wildcard_gateway_name}
  hosts:
    - "harbor.${ARGOCD_ENV_harbor_ui_dns_subdomain}"
  http:

    - match:
        - uri:
            prefix: /v2/
      route:
        - destination:
            host: harbor-registry
            port:
              number: 5000
    - match:
        - uri:
            prefix: /api/
        - uri:
            prefix: /c/
      route:
        - destination:
            host: harbor-core
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: harbor-portal
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-registry
  namespace: ${ARGOCD_ENV_harbor_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_harbor_istio_gateway_namespace}/${ARGOCD_ENV_harbor_istio_wildcard_gateway_name}
  hosts:
    - "harbor-registry.${ARGOCD_ENV_harbor_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /docker.io/v2/
      rewrite:
        uri: /v2/docker.io/
      route:
        - destination:
            host: harbor-core
            port:
              number: 80
    - match:
        - uri:
            prefix: /service/
        - uri:
            prefix: /v2/
      route:
        - destination:
            host: harbor-core
            port:
              number: 80
